hphp/hack/test/typecheck/lambda/map_lambda_bad_pos.php.exp
File "map_lambda_bad_pos.php", line 6, characters 23-46:
Invalid argument (Typing[4110])
  File "map_lambda_bad_pos.php", line 6, characters 24-26:
  Expected `int`
  File "map_lambda_bad_pos.php", line 4, characters 19-24:
  But got `string`
  File "collections/Map.hhi", line 206, characters 17-18:
    via this generic `Tk`
